rmc: Remove recipe since it's not supported upstream
The recipe was removed upstream in meta-intel layer:

commit c12c16659203d677618871f660c1499152a555a8
rmc: remove

It's not being maintained anymore and the scripts have not been kept in
sync with upstream for quite some time.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-snr/README
+++ b/meta-intel-snr/README
@@ -50,8 +50,7 @@ are required:
 In local.conf, set axxiax86-64 machine and add to the white list the
 following packages:
 
-    PNWHITELIST_intel += "rmc-db rmc rmc-efi thermald intel-microcode \
-		          iucode-tool"
+    PNWHITELIST_intel += " thermald intel-microcode iucode-tool"
 
 
 Maintenance
