--- a/meta-intel-snr/README
+++ b/meta-intel-snr/README
@@ -26,7 +26,7 @@ Dependencies
 Intel Meta Layer
 ----------------
 URI: git://git.yoctoproject.org/meta-intel
-branch: rocko
+branch: thud
 revision: HEAD
 
 
