--- a/README
+++ b/README
@@ -43,7 +43,7 @@ to Yocto, but may not have been accepted yet.
 Dependencies
 ============
 
-This layer depends on:
+See DEPENDENCIES.
 
 Poky
 ----
