--- a/README
+++ b/README
@@ -570,17 +570,22 @@ NOTE: (preferred-provider) can be linux-yocto, linux-yocto-rt,
     * 'cd ase/simics'
     * tar czf simics-5.0.168.tgz simics-5.0.168
 
-10.10 Set the serial console depending on the bios you are using.
+10.10 Add gcc9 support for a newer version of gcc and glibc instead
+    the default one from upstream:
+
+    DISTRO_FEATURES_append = " gcc9"
+
+10.11 Set the serial console depending on the bios you are using.
     Default is ttyS4, but some old bios use ttyS5 or ttyS6.
 
     SNR_SERIAL_CONSOLE = "ttyS5"
 
-10.11 Other optional settings for saving disk space and build time:
+10.12 Other optional settings for saving disk space and build time:
    
    DL_DIR = "/(some-shared-location)/downloads"
    SSTATE_DIR = "/(some-shared-location)/sstate-cache
 
-10.12 Examples.
+10.13 Examples.
 
      See http://www.yoctoproject.org/docs/2.3/mega-manual/mega-manual.html
      for complete documentation on the Yocto build system.
